Done API funcs for jettons collection
